scheem homework/scheem.peg
start =
    ignore* expr: expression ignore*
        { return expr; }

validchar = 
    [0-9a-zA-Z_?!+\-=@#$%^&*/.<>|]

atom =
    numbers: [0-9]+
        { return Number( numbers.join( '' ) ); }
  / chars: validchar+
        { return chars.join( '' ); }

whitespace =
    [ \t\r\n]
 
comment =
    ';;' [^\r\n]*

ignore =
    whitespace
  / comment        

atomlistelement =
    ignore+ element: atom
        { return element; }

atomlist =
    first: atom elements: atomlistelement*
        { return [ first ].concat( elements ); }

startlist =
    ignore* "(" ignore* 
    
endlist =   
    ignore* ")" ignore* 

groupelement =
    group: group
        {  return [ group ]; }
  / atomlist: atomlist ignore*
        {  return atomlist; }
  / quote: quote ignore*
        {  return [ quote ]; }

group =
    startlist first: groupelement rest: groupelement* endlist
        {   
            var result = first;        
            for( var i = 0; i < rest.length; i++ ) {
              result = result.concat( rest[ i ] );
            }
            return result; 
         }

quote = 
    "'" expr: expression    
        { return [ 'quote', expr ]; }

expression =
    atom
  / group
  / quote
